:memo: Add starship ln to readme